Fixing spacing issues for `Everything` bentoboxes.

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1660,7 +1660,6 @@ body {
 .bentobox,
 .bentobox-list .specialists {
   width: 100%;
-  margin-bottom: 1.5rem;
   padding: 0;
 }
 
